# BashClass

./: .gitignore  .gitmodules  .travis.yml  404.html  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  Dockerfile  README.md  index.html  mkdocs.yml  run_cmake.sh  run_make_dev.sh  run_make_pro.sh  search.html  sitemap.xml
BashClass_to_Bash/: index.html
bc2b/: index.html
docs/: BashClass_to_Bash.md  bc2b.md  example.md  index.md  syntax.md
example/: files.list  index.html
example/input/: Tutorial.bc
example/lib/: Integer.bc  List.bc  Object.bc  String.bc  Utils.bc
include/bashclass/: BArithOperation.h  BArrayUse.h  BBashHelper.h  BCallableToken.h  BChain.h  BChainCall.h  BChainable.h  BClass.h  BConstructorChainCall.h  BElementType.h  BElif.h  BElse.h  BException.h  BExpression.h  BExpressionCall.h  BExpressionType.h  BFor.h  BFunction.h  BFunctionCall.h  BFunctionChainCall.h  BGenerateCode.h  BGlobal.h  BIf.h  BReport.h  BReturn.h  BScope.h  BScopeFunc.h  BSuperChainAccess.h  BSuperConstructorChainCall.h  BThisAccess.h  BThisCall.h  BThisChainAccess.h  BThisChainCall.h  BTokenCall.h  BTokenUse.h  BTypeFactory.h  BTypes.h  BVariable.h  BVariableAccess.h  BVariableAssign.h  (+11 more)
mkdocs/: search_index.json
resources/src/: grammar.json  input.bc  input2.bc  lexical_config.json  lexical_errors.json  lexical_graph.json  output.sh  syntax_errors.json
src/: main.cpp
src/bashclass/: BashClass.cpp  maindev.cpp  mainpro.cpp
src/call/: BChain.cpp  BChainCall.cpp  BExpressionCall.cpp  BFunctionCall.cpp  BFunctionChainCall.cpp  BThisCall.cpp  BThisChainCall.cpp  BTokenCall.cpp  BVariableCall.cpp  BVariableChainCall.cpp
src/chain/: BChain.cpp  BFunctionChainCall.cpp  BSuperChainAccess.cpp  BThisChainAccess.cpp  BTypeFactory.cpp  BVariableChainAccess.cpp  IBChainable.cpp
src/code/: BBashHelper.cpp  BGenerateCode.cpp
src/components/: BCallableToken.cpp  BClass.cpp  BExpression.cpp  BFunction.cpp  BGlobal.cpp  BIf.cpp  BReturn.cpp  BScope.cpp  BScopeFunc.cpp  BType.cpp  BVariable.cpp  (+2 more)
syntax/: index.html
tutorial/: index.html
(+29 files in other folders)
